--- a/tfhe/Cargo.toml
+++ b/tfhe/Cargo.toml
@@ -45,6 +45,7 @@ env_logger = "0.10.0"
 log = "0.4.19"
 # End regex-engine deps
 colored = "2.0"
+num_cpus = "1.16.0"
 
 [build-dependencies]
 cbindgen = { version = "0.26.0", optional = true }
